--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
     .btn.warn{background:var(--warn);color:#2d2000}
     .muted{color:var(--muted)}
     .slots{display:flex;gap:8px;flex-wrap:wrap}
-    .slot{background:#0e1a29;border:1px solid #22344b;border-radius:10px;padding:8px 10px;cursor:pointer}
+    /* Friendlier booking time chips */
+    .slot{
+      background:#162235;
+      border:1px solid #2b3e5a;
+      color:#e6f0ff;
+      border-radius:10px;
+      padding:10px 12px;
+      cursor:pointer;
+      font-weight:600;
+      transition:background .15s ease,border-color .15s ease,transform .05s ease;
+    }
+    .slot:hover,.slot:focus{ background:#1e2e47; border-color:#3c577f; outline:none }
+    .slot:active{ transform:translateY(1px) }
     .slot[disabled]{opacity:.5;pointer-events:none}
     table{width:100%;border-collapse:collapse;margin-top:8px}
     th,td{border-bottom:1px solid #223044;padding:8px;text-align:left;font-size:14px}
